# mesita

./: README.md  pyproject.toml
mesita/: __init__.py  prettytable.py
tests/: test_public_interface.py
